objects/Release__c.object
<CustomObject>
    <description>Product Releases</description>
    <fields>
        <fullName>All_Previous_Releases__c</fullName>
        <label>Previous Releases (All)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Name__c</fullName>
        <externalId>true</externalId>
        <label>Code Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downloads_Available_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is true, then the release is shown in Downloads.</description>
        <label>Downloads Available Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>END_OF_RELEASE_DATE__c</fullName>
        <label>End of Release</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCS_DATE__c</fullName>
        <label>FCS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_Source_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFG Source Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Releases (MFG Source Release)</relationshipLabel>
        <relationshipName>Mfg_Source_Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mfg_Release_Code__c</fullName>
        <externalId>true</externalId>
        <label>MFG Release Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_Release_Type__c</fullName>
        <label>MFG Release Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotfix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Releases_All__c</fullName>
        <label>Next Releases (All)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Release_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Release Name</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Releases(Previous Release</relationshipLabel>
        <relationshipName>Previous_Release</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_CPM_ID__c</fullName>
        <label>Release CPM ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Lifecycle_Status__c</fullName>
        <label>Release Lifecycle Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <label>Release Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <description>Release Name , same as Name</description>
        <externalId>true</externalId>
        <label>Release Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FUTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code_Name__c</columns>
        <columns>END_OF_RELEASE_DATE__c</columns>
        <columns>FCS_DATE__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Search_Release</fullName>
        <columns>NAME</columns>
        <columns>Code_Name__c</columns>
        <columns>END_OF_RELEASE_DATE__c</columns>
        <columns>FCS_DATE__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SPB</value>
        </filters>
        <label>Search Release</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>